--- a/rock-admin-service/src/main/resources/application.yml
+++ b/rock-admin-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://localhost:3306/cactus?useSSL=false&charsetEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/rock?useSSL=false&charsetEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
   freemarker:
