--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>rock-model</module>
         <module>rock-admin</module>
         <module>rock-security</module>
+        <module>rock-socket</module>
     </modules>
     <packaging>pom</packaging>
     <parent>
@@ -29,6 +30,7 @@
         <hutool.version>5.5.2</hutool.version>
         <knife4j.version>3.0.2</knife4j.version>
         <nimbus-jose-jwt.version>9.10</nimbus-jose-jwt.version>
+        <netty.version>4.1.69.Final</netty.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -64,6 +66,13 @@
                 <artifactId>nimbus-jose-jwt</artifactId>
                 <version>${nimbus-jose-jwt.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
